# heaval

./: .gitignore  CMakeLists.txt  Heaval.cpp  Heaval.h  README.md  build.bat  build.c  build.sh  buildutils.c  buildutils.h
.github/ISSUE_TEMPLATE/: 1-bug-report.md  bug_report.md  feature_request.md
config/: shell_usr.txt
docs/: Building.md  Changelog.md
scripts/: CreateHeader.py  GuiGenerator.py  build.bat  build.sh  run.bat  run.sh
src/cmath/: README
src/cmdutils/: Command.cpp  Command.h  CommandHandler.cpp  CommandHandler.h  Flag.cpp  Flag.h  Option.cpp  Option.h
src/common/: Paths.cpp  Paths.h  Resources.cpp  Resources.h  Shell.cpp  Shell.h
src/console/: ConsoleLogging.cpp  ConsoleLogging.h  ConsoleMessage.cpp  ConsoleMessage.h
src/framework/: FrameworkHooks.cpp  FrameworkHooks.h  HeavalBase.cpp  HeavalBase.h  HeavalFramework.cpp  HeavalFramework.h
src/framework/gui/: TestGui.cpp  TestGui.h
src/framework/gui/objects/: Button.cpp  Button.h  DialogueBox.cpp  DialogueBox.h  InstanceLogger.cpp  InstanceLogger.h  TextBox.cpp  TextBox.h
src/framework/gui/utils/: Gui.cpp  Gui.h  GuiGuide.cpp  GuiGuide.h  GuiTitle.cpp  GuiTitle.h
src/framework/info/: Repository.cpp  Repository.h  Version.cpp  Version.h
src/framework/modules/browselib/: Browser.cpp  Browser.h  Link.cpp  Link.h
src/framework/modules/display/: Linebar.cpp  Linebar.h  Prompt.cpp  Prompt.h  Title.cpp  Title.h
src/framework/modules/handle/: Error.cpp  Error.h  Process.cpp  Process.h  Warning.cpp  Warning.h
src/io/: StdUtils.cpp  StdUtils.h  Stdio.cpp  Stdio.h
src/lib/: Convert.cpp  Convert.h  File.cpp  File.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Time.cpp  Time.h
src/lib/git/: GitDown.cpp  GitDown.h  GitUtils.cpp  GitUtils.h  LibGit.cpp  LibGit.h
src/lib/sys/: Platform.cpp  Platform.h  PlatformVariables.cpp  PlatformVariables.h  System.cpp  System.h
src/math/: Formula.cpp  Formula.h  Math.cpp  Math.h  MathUtils.cpp  MathUtils.h  README
src/parser/: Calls.cpp  Calls.h  CommandParser.cpp  CommandParser.h
